@@ -1,3 +1,15 @@
 bin_PROGRAMS = hello-newbie
 hello_newbie_SOURCES = hello-newbie.c
 man_MANS = hello-newbie.1
+
+distclean-local:
+    -rm -rf autom4te.cache/
+
+    -rm -f *~ \
+    aclocal.m4 \
+    config.* \
+    configure \
+    depcomp \
+    install-sh \
+    Makefile.in \
+    missing
